[package]
name = "lpm"
version = "0.1.0"
authors = ["Mark Toda <mtoda@bitgo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crev-recursive-digest = { version = "0.4.0" }
app_dirs = "1.2.1"
anyhow = "1.0.31"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.55", features = ["preserve_order"] }
solvent = "0.8.1"
clap = "2.33.1"
chrono = "0.4.11"
tar = "0.4.29"
flate2 = "1.0.14"
reqwest = { version = "0.10.6", features = ["blocking"] }
blake2 = "0.8.0"
base64 = "0.11"
digest = "0.8"
hex = "0.4.2"
